fix(incorrect titles underline): Widget editor: title underline not aligned (#2682)
* New css class applied to stick to headers

--- a/frontend/app/less/widget-editor.less
+++ b/frontend/app/less/widget-editor.less
@@ -47,14 +47,9 @@
   margin: 1em 0 1.5em;
 }
 
-.CustomEditor-section::after {
-  content: '';
-  position: absolute;
-  width: 115px;
-  height: 2px;
-  bottom: -0.4em;
-  left: 0;
-  background-color: @color-custom-editor-section;
+.CustomEditor-section-underline {
+  padding-bottom: 0.3em;
+  border-bottom: 2px solid currentColor;
 }
 
 .Property-actions {
